--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
     display: grid;
     width: 100vw;
     height: 100vh;
-    grid-template-rows: 0.25fr 1.5fr 1fr 1.5fr 0.7fr 1fr 1fr 0.8fr 0.4fr;
+    grid-template-rows: 0.25fr 1.5fr 1fr 1.5fr 0.7fr 1fr 1fr 0.4fr;
     background-image: url('./assets/bg.png');
     background-repeat: no-repeat;
     background-size: cover;
