--- a/src/components/Headline.css
+++ b/src/components/Headline.css
@@ -3,6 +3,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   height: 70vh;
+  width: 100vw;
   grid-template-areas: "left right";
 }
 
@@ -68,5 +69,10 @@
   /* Brand / Purple */
 
   color: #8c30f5;
+}
+@media only screen and (max-width: 600px) {
+  .headline {
+    display: none;
+  }
 
 }
